--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="facebook">Continuer avec Facebook</string>
-    <string name="nv">Nouveau sur PowerHome ?</string>
+    <string name="nv">Nouveau sur EcoPower ?</string>
     <string name="creer_compte">CREER UN COMPTE</string>
     <string name="connect">SE CONNECTER</string>
     <string name="mdp">Mot de passe</string>
@@ -12,6 +12,6 @@
     <string name="sign_up">Créer un compte</string>
     <string name="create_account">Créer un nouveau compte</string>
     <string name="name">Prénom</string>
-    <string name="surname">Nom</string>
+    <string name="lastname">Nom</string>
     <string name="phone">Mobile</string>
 </resources>
