login ya plus deux fois "sign up"

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -51,5 +51,6 @@
     <string name="add_appliances">Add Appliances</string>
     <string name="back">Back</string>
     <string name="save">Save</string>
+    <string name="welcome">Bienvenido 👋</string>
 
 </resources>
