--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -51,6 +51,7 @@
     <string name="add_appliances">Add Appliances</string>
     <string name="back">Back</string>
     <string name="save">Save</string>
+    <string name="welcome">Bienvenue 👋</string>
 
 
 </resources>
