--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -13,7 +13,7 @@
     <string name="create_account">Créer un nouveau compte</string>
     <string name="name">Prénom</string>
     <string name="lastname">Nom</string>
-    <string name="phone">Mobile</string>
+    <string name="phone">Téléphone</string>
     <string name="hello_blank_fragment">Bonjour fragment vierge</string>
     <string name="open">Ouvrir</string>
     <string name="close">Fermer</string>
@@ -49,9 +49,13 @@
     <string name="total_consumption">Consomamtion totale</string>
     <string name="floor">Etage</string>
     <string name="add_appliances">Add Appliances</string>
-    <string name="back">Back</string>
-    <string name="save">Save</string>
+    <string name="back">Retour</string>
+    <string name="save">Sauvegarder</string>
     <string name="welcome">Bienvenue 👋</string>
+    <string name="no_notification">Aucune notification</string>
+    <string name="about">A propos</string>
+    <string name="confirm_e_mail">Confirmer l\'e-mail</string>
+    <string name="confirm_password">Confirmer le mot de passe</string>
 
 
 </resources>
