--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,10 @@
     <string name="save">Save</string>
     <string name="next_month" translatable="false"><![CDATA[>]]></string>
     <string name="welcome">Welcome 👋</string>
+    <string name="no_notification">No notification</string>
+    <string name="about">About</string>
+    <string name="confirm_e_mail">Confirm e-mail</string>
+    <string name="confirm_password">Confirm Password</string>
 
 
 </resources>
