--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -56,5 +56,6 @@
     <string name="about">Acerca</string>
     <string name="confirm_e_mail">Confirmar e-mail</string>
     <string name="confirm_password">Confirmar contraseña</string>
+    <string name="edit_profile">Edit profile</string>
 
 </resources>
