--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -56,6 +56,7 @@
     <string name="about">A propos</string>
     <string name="confirm_e_mail">Confirmer l\'e-mail</string>
     <string name="confirm_password">Confirmer le mot de passe</string>
+    <string name="edit_profile">Edit profile</string>
 
 
 </resources>
